# 02476_ML-OPS_project

./: .dvcignore  .gitignore  .pre-commit-config.yaml  1README.md  1_Tensors_in_PyTorch.ipynb  AGENTS.md  README.md  Train.py  Training_Neural_Networks_Filled.ipynb  backendfastapi.py  command.md  data.dvc  data.py  evaluate.py  frontendtest.py  merge_data.py  model.py  pyproject.toml  ruff.toml  tasks.py  train.py  vertex_job.yaml
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: cml_data.yaml  docker-build.yml  linting.yaml  model_registry_gate.yaml  pre-commit-update.yaml  pre_commit.yaml  tests-and-coverage.yml  tests.yaml
configs/: config.yaml  sweep.yaml  tensorboardprofiling.yaml  vertex.yaml
configs/experiment/: exp1.yaml  exp2.yaml
dockerfiles/: api.dockerfile  apic.dockerfile  build_and_push_train_image.ps1  train.dockerfile  vertex-train.cuda.dockerfile  vertex-train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: traffic_sign_model.pt.dvc
outputs/2026-01-14/11-35-42/.hydra/: hydra.yaml
outputs/2026-01-14/11-39-57/.hydra/: config.yaml  hydra.yaml
reports/: README.md  report.py
src/sign_ml/: Distributed_Training.py  __init__.py  api.py  apicloud.py  command.md  data.py  data_distributed.py  downlaod_data.py  evaluate.py  frontend.py  merge_data.py  model.py  model_gate.py  observability.py  train.py  utils.py  vertex_data.py  vertex_train.py  visualize.py
src/sign_ml/3Logging/1Exercise_Application logging/: 1my_logger.py  2my_logger.py  3my_logger.py  6my_logger_hydra.py  config.yaml
src/sign_ml/3Logging/2exercise_Experiment logging/: 4a_train.py  4b_train.py  4c_train.py  load_from_env_file.py
src/sign_ml/3Logging/2exercise_Experiment logging/my_project/: __init__.py  data.py  model.py
src/sign_ml/configs_files/experiment/: exp2.yaml
tests/: test_api.py  test_data.py  test_model.py
tests/integrationtests/: test_api.py
tests/performancetests/: test_locustfile.py
tests/unittests/: test_data.py  test_data_distributed.py
